[package]
name = "aoc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glam = "0.25.0"
indicatif = "0.17.7"
itertools = "0.12.0"
lazy_static = "1.4.0"
num = "0.4.1"
rand = "0.8.5"
# reqwest = { version = "0.12.24", features = ["blocking", "json"] }
# serde = { version = "1.0.228", features = ["derive"] }
# serde_json = "1.0.145"
